# project-keyword-spotter

./: .gitignore  CLAUDE.md  CLAUDE.org  EDGETPU_SETUP.org  Makefile  README_LOG_ANALYZER.md  log_analyzer_issue.md  pyproject.toml  run_log_analyzer.sh
project_keyword_spotter/: check_edgetpu_status.py  collect_training_logs.py  detect_coral.py  log_analyzer.py  test_coral_inference.py
